Adicionei Javascript, botões atualizam visor
teclados estão funcionais, entretanto preciso fazer a lógica para os botões AC, C, parênteses e igual. A ideia é trabalhar com strings.

--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -20,13 +20,17 @@ body {
     border-radius: 4px;
     background-color: #004155;
     border: 10px solid #002b39;
-    
+
 }
 
 #visor {
     height: 50px;
     background-color: #a7c28b;
-    border: 4px solid black
+    border: 4px solid black;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-size: 30px;
 }
 
 #teclado {
